Wed Aug 13 16:20:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Change get_terms_for_field() to
	  iter_terms_for_field() (and make it iterate the terms, rather
	  than returning them in a list, too).
	* xappy/unittests/get_terms_for_field.py,
	  xappy/unittests/terms_for_field.py: Rename get_terms_for_field.py
	  to terms_for_field.py and expand it a bit.

Wed Aug 13 15:46:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Add support for prefixes longer than
	  1 character to PrefixedTermIter.

Wed Aug 13 14:14:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/get_terms_for_field.py:
	  Whitespace tidyup.

Wed Aug 13 12:36:58 GMT 2008  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/searchconnection.py: Added get_terms_for_field().
	* xappy/unittests/get_terms_for_field.py: Test
	  get_terms_for_field().

Wed Aug 06 07:11:23 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/dociter.py: Add support for iterating through all
	  the documents to get a list directly, rather than having to call
	  get_document() on every item returned by iterids().

Wed Aug 06 07:10:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py,xappy/unittests/range_speed.py:
	  Add standard copyright headers.

Wed Aug 06 07:09:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Add a placeholder for documenting
	  query_external_weight().

Tue Aug 05 14:21:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Explain why we multiply the range
	  accel searches by 0.

Tue Aug 05 11:11:39 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/similar.py: Add test