@@ -11,7 +11,7 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License along
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -33,7 +33,7 @@ class FieldMappings(object):
       in.
 
     """
-    __slots__ = '_prefixes', '_prefixcount', '_slots', '_slotcount', 
+    __slots__ = '_prefixes', '_prefixcount', '_slots', '_slotcount',
 
     def __init__(self, serialised=None):
         """Create a new field mapping object, or unserialise a saved one.
