@@ -11,7 +11,7 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License along
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -60,7 +60,7 @@ def _get_physical_mem_win32():
         import ctypes.wintypes as wintypes
     except ValueError:
         return None
-    
+
     class MEMORYSTATUS(wintypes.Structure):
         _fields_ = [
             ('dwLength', wintypes.DWORD),
