@@ -1,3 +1,8 @@
+Wed Aug 20 12:31:38 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* build.py,setup.py,test.py,xappy/,xappy/unittests/: Remove
+	  trailing whitespace.
+
 Wed Aug 13 16:20:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Change get_terms_for_field() to
